# pysyft-traffic-privacy-demo

./: .gitignore  README.md  claude-code-blog.html  demo_server.py  index.html  pyproject.toml  simple_demo.py
infrastructure_src/: analyze.py  generate.py  upload.py
