# /// script
# requires-python = ">=3.10"
# dependencies = [
#     "syft",
#     "numpy",
#     "pandas",
#     "matplotlib",
#     "hagrid",
# ]
# ///

[project]
name = "syft-traffic-demo"
version = "0.1.0"
description = "Privacy-preserving traffic analysis demo using Syft"
authors = [{name = "Demo User"}]
requires-python = ">=3.10"
dependencies = [
    "syft>=0.9.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    "hagrid>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
